# FileDictCracker

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: Extension.h  main.cpp
src/Pdf/: Pdf.cpp  Pdf.h
src/Zip/: Zip.cpp  Zip.h
